MAPREDUCE-4238. mavenize data_join. (tgraves)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/trunk@1338835 13f79535-47bb-0310-9956-ffa450edef68